
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct cfq_group {unsigned int* busy_queues_avg; } ;
struct cfq_data {int dummy; } ;


 unsigned int cfq_group_busy_queues_wl (int,struct cfq_data*,struct cfq_group*) ;
 int cfq_hist_divisor ;
 unsigned int max (unsigned int,unsigned int) ;
 unsigned int min (unsigned int,unsigned int) ;

__attribute__((used)) static inline unsigned cfq_group_get_avg_queues(struct cfq_data *cfqd,
     struct cfq_group *cfqg, bool rt)
{
 unsigned min_q, max_q;
 unsigned mult = cfq_hist_divisor - 1;
 unsigned round = cfq_hist_divisor / 2;
 unsigned busy = cfq_group_busy_queues_wl(rt, cfqd, cfqg);

 min_q = min(cfqg->busy_queues_avg[rt], busy);
 max_q = max(cfqg->busy_queues_avg[rt], busy);
 cfqg->busy_queues_avg[rt] = (mult * max_q + min_q + round) /
  cfq_hist_divisor;
 return cfqg->busy_queues_avg[rt];
}
